argocd/env-app/overlays/stage/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    kubernetes.io/ingress.class: traefik 
spec:
  rules:
    - host: env-app-k3s-2.monopot.xyz  # gets patched
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-app
                port:
                  number: 80
